--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Data types</title>
-    <script src="./js/getNumbers.js" type="text/javascript"></script>
-    <script src="./js/getNumericSum.js" type="text/javascript"></script>
-    <script src="./js/getQuanOfUniqueCharacters.js" type="text/javascript"></script>
-    <script src="./js/getPensionersName.js" type="text/javascript"></script>
-  </head>
-  <body>
-  </body>
-</html>
+    <head>
+        <meta charset="utf-8">
+        <title>home task</title>
+    </head>
+    <body>
+        <script>
+        //1
+              function getNumbers(string) {
+                var array = [];
+               for (var i = 0; i < string.length ; i++){
+                 var numb = parseInt(string[i]);
+                    if(!isNaN(numb)) array.push(numb);
+                 }
+                 return array;
+              }
+
+//2
+              function getNumericSum(string) {
+               var all = 0;
+               for (var i = 0; i < string.length ; i++){
+                  var numb = parseInt(string[i]);
+                 if (!isNaN(numb)) all += numb;
+                 }
+                 return all;
+              }
+
+//3 поки не працює,потім дороблю
+//4
+
+              function getQuanOfUniqueCharacters(string) {
+                  var all = 0;
+                  string.split("").sort().forEach(function(item,i,array){
+                      if(array[i] != array[i + 1]) all++;
+                  });
+                return all;
+              };
+//5
+
+              function getPensionersName(string) {
+                 var Pensioners_Name = [];
+                 for (var i = 0; i < string.length; i++) {
+                    if (string[i].age >= 65) {
+                         Pensioners_Name = (string[i].name);
+                      }
+                  }
+                  return Pensioners_Name;
+              }
